deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spur-cloud
---
apiVersion: v1
kind: Namespace
metadata:
  name: spur-sessions
